force-app/main/default/objects/Telegram_User__c/Telegram_User__c.object-meta.xml
<CustomObject>
    <label>Telegram User</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Telegram User Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telegram User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>