force-app/main/default/objects/Telegram_User__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>User&apos;s or bot&apos;s first name.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>