force-app/main/default/objects/Telegram_User__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier for this user or bot. This number may have more than 32 significant bits and some programming languages may have difficulty/silent defects in interpreting it. But it has at most 52 significant bits, so a 64-bit integer or double-precision float type are safe for storing this identifier.</description>
    <externalId>true</externalId>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>