force-app/main/default/objects/Telegram_User__c/fields/Is_bot__c.field-meta.xml
<CustomField>
    <fullName>Is_bot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if this user is a bot.</description>
    <label>Is bot</label>
    <type>Checkbox</type>
</CustomField>