force-app/main/default/objects/Telegram_User__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>Optional. IETF language tag of the user&apos;s language.</description>
    <label>Language Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>