force-app/main/default/objects/Telegram_User__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Optional. User&apos;s or bot&apos;s last name.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>