force-app/main/default/objects/Telegram_User__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Optional. User&apos;s or bot&apos;s username.</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>